--- a/src/block/timeline/style.scss
+++ b/src/block/timeline/style.scss
@@ -11,8 +11,16 @@
 	--line-bg-width: 3px;
 	--content-line: 40px;
 	--fixed-bg: linear-gradient(to bottom, var(--line-accent-bg-color, #000) 0, var(--line-accent-bg-color-2, #000) var(--line-accent-bg-location, 50%), var(--line-bg-color, #eee) var(--line-accent-bg-location, 50%));
+	--stk-block-margin-bottom: 0;
 	position: relative;
 	padding: 16px 0;
+	margin-block-start: 0 !important;
+}
+// Remove the default bottom margin of the timeline block because it's annoying
+// to keep on removing it when you want to stack them. This works in conjunction
+// with the stackable.resizable-bottom-margin.default filter in edit.js.
+.stk-block.stk-block-timeline {
+	margin-bottom: 0;
 }
 .stk-block-timeline > .stk-inner-blocks {
 	display: grid;
@@ -38,6 +46,10 @@
 .stk-block-timeline--left .stk-block-timeline__date {
 	grid-column: 3 / 4;
 }
+// prevents content to be overlapped by background
+.stk-block-timeline > .stk-inner-blocks > * {
+	z-index: 2;
+}
 .stk-block-timeline > .stk-inner-blocks::after {
 	content: "";
 	position: absolute;
@@ -47,6 +59,7 @@
 	bottom: 0;
 	background: var(--fixed-bg);
 	background-attachment: fixed;
+	z-index: 2;
 }
 .stk-block-timeline__middle {
 	border-radius: var(--line-dot-border-radius, 100%);
@@ -66,7 +79,7 @@
 .stk-block-timeline + .stk-block-timeline > .stk-inner-blocks::after {
 	top: 0;
 }
-.stk-block-timeline:has(+ .stk-block-timeline) > .stk-inner-blocks::after {
+.stk-block-timeline:not(.stk-is-last) > .stk-inner-blocks::after {
 	bottom: 0;
 }
 
@@ -87,10 +100,10 @@
 	inset-inline-end: 50%;
 }
 .stk-block-timeline--right .stk-block-timeline__content {
-	margin-inline-start: var(--content-line, 0);
+	margin-inline-start: max(calc(var(--content-line, 0) - calc(var(--line-dot-size, 0) * 0.5)), 0px);
 }
 .stk-block-timeline--left .stk-block-timeline__content {
-	margin-inline-end: var(--content-line, 0);
+	margin-inline-end: max(calc(var(--content-line, 0) - calc(var(--line-dot-size, 0) * 0.5)), 0px);
 }
 
 @include mobile {
@@ -102,9 +115,13 @@
 		grid-template-columns: var(--line-dot-size, 16px) 1fr;
 		grid-template-rows: auto 1fr;
 		align-items: flex-start;
+		padding-left: 16px;
 	}
 	.stk-block-timeline > .stk-inner-blocks::after {
-		inset-inline-start: calc(var(--line-dot-size, 16px) / 2 - var(--line-bg-width, 3px) / 2);
+		inset-inline-start: calc(var(--line-dot-size, 16px) / 2 - var(--line-bg-width, 3px) / 2 + 16px);
+	}
+	.stk-block-timeline.stk-block-background .stk-block-timeline__middle {
+		margin-left: -16px;
 	}
 	.stk-block-timeline .stk-block-timeline__middle {
 		grid-column: 1 / 2;
@@ -129,8 +146,5 @@
 	}
 	.stk-block-timeline + .stk-block-timeline > .stk-inner-blocks::after {
 		top: -16px;
-	}
-	.stk-block-timeline:has(+ .stk-block-timeline) > .stk-inner-blocks::after {
-		bottom: 0;
 	}
 }
